# Sortbook-RUST

./: .gitignore  README.md  agents.md
doc/: README.md  author_alias_online.md  authors_import.md  cleanup_filenames_rust.md  cleanup_rust.md  sortbook_rust.md  works_import.md
scripts/author-alias-online/: Cargo.toml
scripts/author-alias-online/src/: main.rs
scripts/cleanup/: Cargo.toml
scripts/cleanup-filenames/: Cargo.toml
scripts/cleanup-filenames/src/: main.rs
scripts/cleanup/src/: main.rs
scripts/import/: import_authors_sqlite.py  import_works_sqlite.py
scripts/sort/: Cargo.toml
scripts/sort/src/: main.rs
