[package]
name = "sortbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2"
which = "6"
tempfile = "3"
indicatif = "0.17"
infer = "0.15"
unicode-normalization = "0.1"
serde_path_to_error = "0.1"
simdutf8 = "0.1"
chrono = { version = "0.4", features = ["clock"] }
